# partition

./: .gitignore  README.md  parser_test.py  partition.csv  req.txt  smallest.mesh  vikrita.ipynb
grow/: BFS_Partition.py  grow_partition.py  paraview_script_pagerank.py  parititions_by_oversampling.py  run.py  vtk_utils.py
grow/results/: 2024-04-11___14-12-51-sfc_seed-2pass_2xoversample-np800-70largetetmeshes.json
misc/: connected_meshes_hex.txt  connected_meshes_tet.txt  copy_meshes.sh  filter_connected.py  gen_graph.py
misc/grow/: BFS_Partition.py  graph_walk.py  grow_partition.py  pagerank.py  paraview_script.py  parititions_by_oversampling.py  partition_results_plot.ipynb  run.py
misc/grow/results/: 2024-04-11___13-38-32-sfc_seed-2pass_2xoversample-np200-70largehexmeshes.json  2024-04-11___17-22-08-sfc_seed-pagerank-np800-70largetetmeshes.json  2024-04-11___18-25-38-sfc_seed-pagerank-np200-70largehexmeshes.json
misc/my/: 3dtest.ipynb  all_partition_with_mesh.py  graph_viz.py  grph_part_hilbert.ipynb  mortontest.py  o3dtest.ipynb  partition_results_prev.csv
mpi-cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  compile-and-run-chpc.sh  compile-and-run-frontera.sh  compile-and-run.sh  connected_hex.txt  connected_tet.txt  file_list_scaling.txt  fixed_g_size_plot.ipynb  get-data-slurm.sh  gmsh_partition.cpp  main-dist.cpp  main-new.cpp  main-octree.cpp  main.cpp  mesh_files_hex_scaling.txt  mesh_files_list.txt  metric_export.py  metrics_plot.ipynb  paraview_script.py  process_count.cpp  scaling_plot.ipynb
mpi-cpp/contrib/nlohmann-json/: version.txt
mpi-cpp/lib/: CMakeLists.txt  config.h
mpi-cpp/lib/bfs-com/: CMakeLists.txt  bfs-com.cpp  bfs-com.hpp
mpi-cpp/lib/dist-graph/: CMakeLists.txt  dist-graph.cpp  dist-graph.hpp
mpi-cpp/lib/graph/: CMakeLists.txt  graph.cpp  graph.hpp
mpi-cpp/lib/graph-part/: CMakeLists.txt  graph-part.hpp
mpi-cpp/lib/linalg/: CMakeLists.txt  linalg.hpp  linalg.tcc
mpi-cpp/lib/mesh-util/: CMakeLists.txt  mesh-util.cpp  mesh-util.hpp  mesh-util.tcc
mpi-cpp/lib/metis-util/: CMakeLists.txt  metis-util.cpp  metis-util.hpp
mpi-cpp/lib/scotch-util/: CMakeLists.txt  scotch-util.cpp  scotch-util.hpp
mpi-cpp/lib/sfc/: CMakeLists.txt  sfc.cpp  sfc.hpp
mpi-cpp/lib/usort/: CMakeLists.txt  dtypes.h  parUtils.tcc
mpi-cpp/lib/util/: CMakeLists.txt  util.cpp  util.hpp
mpi-cpp/lib/vtk-util/: CMakeLists.txt  vtk-util.cpp  vtk-util.hpp
mpi-cpp/results/: 2024-05-20__23-16-18.json  chpc-2024-05-14__15-16-41.json  chpc-mvapich2-scaling-2024-05-15__12-36-06.json  chpc-mvapich2-scaling-2024-05-15__13-21-20.json  chpc-mvapich2-scaling-2024-05-15__15-40-29.json  chpc-scaling-2024-05-14__17-16-43.json  chpc-scaling-32-16-16__2024-05-21__18-19-01.json  chpc-scaling-32__2024-05-21__16-42-05.json  chpc-scaling-64__2024-05-21__17-34-09.json  frontera-intelmpi-scaling-2024-05-16__19-15-13.json  frontera-intelmpi-scaling-2024-05-18__23-17-25.json  frontera-intelmpi-scaling-2024-05-19__01-13-11.json  frontera-intelmpi-scaling-std-bfs-types-32-16-16___2024-05-21__22-53-47.json  frontera-intelmpi-scaling-std-bfs-types-32-16-16___2024-05-22__22-00-42.json  frontera-intelmpi-scaling-std-bfs-types-32-16-16___2024-05-23__12-43-55.json  frontera-intelmpi-scaling-std-bfs-types-32-32-16___2024-05-21__21-06-05.json  frontera-intelmpi-scaling-std-bfs-types-32-32-16___2024-05-22__23-43-28.json  frontera-scaling-front_bfs-1xlargesttet-normq___2024-07-10__13-23-38.json  frontera-scaling-front_bfs-1xlargesttet-normq___2024-07-14__03-53-19.json  frontera-scaling-front_bfs-1xrefinedlargesttetmsh___2024-06-29__01-04-10.json  frontera-scaling-front_bfs-200spmv-2ndlargehex-5rfnrnds___2024-08-05__20-35-58.json  frontera-scaling-front_bfs-200spmv-2ndlargetet-5rfnrnds___2024-08-05__18-30-57.json  frontera-scaling-front_bfs-200spmv-largehex-5rfnrnds___2024-08-05__17-44-50.json  frontera-scaling-front_bfs-200spmv-largetet-5rfnrnds___2024-08-05__16-26-46.json  frontera-scaling-front_bfs-2xrefinedcoilmsh___2024-06-29__00-17-48.json  frontera-scaling-front_bfs-coil-mesh___2024-06-19__17-41-49.json  frontera-scaling-front_bfs-directsolver___2024-07-03__15-46-13.json  frontera-scaling-front_bfs-hexmeshes___2024-07-05__18-04-06.json  frontera-scaling-front_bfs-large-meshes___2024-06-19__16-10-43.json  frontera-scaling-front_bfs-largest_tet_list___2024-07-05__15-40-27.json  frontera-scaling-front_bfs-largesthexmeshes___2024-07-08__15-48-11.json  frontera-scaling-front_bfs-largesttetmsh___2024-06-29__00-40-35.json  frontera-scaling-front_bfs-refinecoil-wothscotch___2024-07-08__13-38-41.json  frontera-scaling-front_bfs-with-coil-mesh___2024-06-06__22-45-58.json  frontera-scaling-front_bfs-withptscotch___2024-07-05__14-45-02.json  frontera-scaling-front_bfs-withsolver___2024-07-02__17-20-12.json  frontera-scaling-front_bfs___2024-05-30__19-10-01.json  frontera-scaling-front_bfs___2024-06-06__19-42-12.json  frontera-scaling-front_bfs___2024-06-29__02-21-52.json  frontera-scaling-overlapped-com___2024-06-20__19-27-55.json  (+5 more)
my/: 2dpart.py  all_partition_with_mesh.py  graph.ipynb  graph_mesh_viz.ipynb  graph_mesh_viz.py  grph_part_morton.ipynb  morton_sort.ipynb  morton_sort.py  partition_results.csv  partition_results_plot.ipynb  test11.py
papers/: .gitignore
papers/paper-1/: README.md  main-bib.bib  main.tex  template_instructions.tex
papers/paper-1/data/: part-quality.csv
