# add_library(util util.cpp)
# target_include_directories(${MAIN_TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# set(CHILD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/child_directory)
# target_link_libraries(util PUBLIC graph mesh-util ${GMSH_LIBRARIES})
# include_directories(${CMAKE_CURRENT_SOURCE_DIR})
target_sources(${MAIN_TARGET_NAME} PRIVATE util.cpp)
# list(APPEND MAIN_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
# include_directories(${MAIN_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})